--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,8 @@
 
+  ## 6/3/2023 - [中俄无视美国在联合国谴责朝鲜发射卫星的呼吁](https://www.voachinese.com/a/china-and-russia-ignore-us-call-at-un-to-condemn-north-korea-launch-20230602/7121345.html)
+ ```中国和俄罗斯周五（6月2日）无视美国呼吁联合国安理会团结起来，共同谴责朝鲜本周试图发射卫星，反而指责华盛顿加剧了朝鲜半岛的紧张局势。```0
+  ## 6/3/2023 - [拜登在白宫椭圆形办公室就避免债务违约发表讲话，强调两党妥协与共识](https://www.voachinese.com/a/biden-highlights-compromise-in-oval-office-remarks-on-us-avoiding-default-20230602/7121372.html)
+ ```在进行了几个星期的艰难谈判后，美国总统乔·拜登星期五(6月2日)晚间就《财政责任法案》的通过发表讲话，强调了他与共和党人达成两党共识的能力。在拜登2024年竞选连任期间，这肯定将会是他再度凸显的一个主题```0
   ## 6/3/2023 - [美国国防部长抨击中国无意进行军事对话](https://www.voachinese.com/a/u-s-defense-chief-slams-china-for-lack-of-military-dialog-20230602/7121371.html)
  ```美国国防部长劳埃德·奥斯汀周六表示，他对中国不愿就军事危机管控进行接触深表关切，并警告说会谈是避免冲突的关键。```0
   ## 6/3/2023 - [又有两名“誓言守护者”因冲击国会山事件被判刑](https://www.voachinese.com/a/oath-keepers-convicted-of-storming-capitol-get-latest-extremist-sentencings-20230602/7121343.html)
@@ -44,9 +48,3 @@
 
 ](https://www.voachinese.com/a/hong-kong-ex-democrat-politician-gives-out-candles-on-tiananmen-crackdown-anniversary-2-0230602/7120250.html)
  ```在港版国安法和疫情的影响下，过去数年香港人无法自由悼念六四。近日港府官员更先后就悼念六四表态，强调港人的行为若不符合法律会果断执法。在大多数港人选择保持沉默的同时，香港一名前民主派区议员却在政治红线下以自己的方式唤起港人对六四的记忆。```0
-  ## 6/2/2023 - [三十四年后再回首 六四学生“没想到”什么？](https://www.voachinese.com/a/tiananmen-massacre-student-leaders-recalling-what-surprised-them-20230602/7120197.html)
- ```由于中国共产党当局的信息封锁，中国许多年轻人不清楚甚至不知道，三十四年前的1989年6月4日，中共当局曾经出动军队对聚集在天安门广场的学生和市民抗议者进行了血腥镇压。当年的热血青年学生，如今也都白发斑斑。三十四年前和三十四年后，回首往事，他们最感到意外的是什么？```0
-  ## 6/2/2023 - [六四周年将至，港人在国安法淫威下选择私下纪念
-
-](https://www.voachinese.com/a/amid-shrinking-freedoms-hong-kongers-commemorate-tiananmen-anniversary-privately-20230602/7119986.html)
- ```即将到来的星期天（6月4日）将是天安门血腥屠杀事件34周年纪念日，但是多年来一直在六四当天举办大型纪念活动，公开向罹难者致哀致敬的港人现在却在国安法的阴霾与淫威下，被迫选择私下举行悼念活动。```0
