--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,14 @@
 
+  ## 6/3/2023 - [“六四”前夕，“四通桥”从中国地图应用程序消失](https://www.dw.com/zh/六四-前夕，-四通桥-从中国地图应用程序消失/a-65816483?maca=chi-rss-chi-all-1127-rdf)
+ ```“六四”34周年前夕，在地图应用程序百度地图、高德地图和腾讯地图上用在中国大陆普遍使用的简体中文搜索“四通桥”，将出现“未找到相关地点”的信息。此前一直挂在四通桥上写有桥名的路牌也被拆除。```0
+  ## 6/3/2023 - [德语媒体：中国是否会摧毁德国工业？](https://www.dw.com/zh/德语媒体：中国是否会摧毁德国工业？/a-65816455?maca=chi-rss-chi-all-1127-rdf)
+ ```《商报》担忧，中国凭借廉价大生产优势，将会威胁到德国产业的根基，德国政界必须尽快采取行动避免去工业化。《新苏黎世报》则刊发客席评论，指出尽管专制中国屡次打击民主运动，但是人类的自由的渴求永远不会被扼杀。```0
+  ## 6/3/2023 - [普京逮捕令：外交豁免权效力有多大？](https://www.dw.com/zh/普京逮捕令：外交豁免权效力有多大？/a-65816473?maca=chi-rss-chi-all-1127-rdf)
+ ```南非即将于夏季举办金砖国家峰会，被国际刑事法院发布逮捕令的俄罗斯总统普京也受邀出席。身背逮捕令的普京如何与会？```0
+  ## 6/3/2023 - [泽连斯基：乌克兰已做好反攻准备](https://www.dw.com/zh/泽连斯基：乌克兰已做好反攻准备/a-65816464?maca=chi-rss-chi-all-1127-rdf)
+ ```乌克兰总统泽连斯基表示，目前已经为反攻战做好了准备，他还提到乌克兰需要更多爱国者导弹以抵御俄军的空袭。与此同时，在俄罗斯境内近日也出现多起空袭事件，但乌克兰方面否认与之有关。```0
+  ## 6/3/2023 - [《5月35日》：香港「六四記憶」能移植台灣嗎？](https://www.dw.com/zh/《5月35日》：香港「六四記憶」能移植台灣嗎？/a-65816201?maca=chi-rss-chi-all-1127-rdf)
+ ```香港六四紀念劇《5月35日》無法在港公演，今年首度移師台灣——這對香港人與台灣人來說有什麼意義？香港逐漸被「清洗」的六四記憶，能在台灣移植、落地嗎？DW採訪幕後團隊與學者理解他們的答案。```0
   ## 6/3/2023 - [美国中央情报局长秘密访问中国](https://www.dw.com/zh/美国中央情报局长秘密访问中国/a-65815540?maca=chi-rss-chi-all-1127-rdf)
  ```一位不愿透露姓名的美国官员表示，中央情报局局长伯恩斯上个月秘密访问中国。这位情报官员进行过多次敏感的访问，包括在2021年底访问俄罗斯，讨论莫斯科准备入侵乌克兰的迹象。```0
   ## 6/3/2023 - [“六四”临近 香港人如何悄悄纪念？](https://www.dw.com/zh/六四-临近-香港人如何悄悄纪念？/a-65815259?maca=chi-rss-chi-all-1127-rdf)
@@ -37,16 +47,8 @@
  ```天安門事件將屆34週年之際，「六四紀念館」在紐約開幕。在香港當局系統性抹去這場大屠殺記憶的此刻，專家告訴DW，海外的紀念活動將延續香港的傳統，也代表人們對自由和民主的渴望不會那麼容易被澆熄。```0
   ## 6/2/2023 - [美國債務上限法案在參議院過關](https://www.dw.com/zh/美國債務上限法案在參議院過關/a-65760918?maca=chi-rss-chi-all-1127-rdf)
  ```為了在6月5日的違約最後期限之前讓法案過關，美國國會在跟時間賽跑，最後終於在週四通過法案，可送交美國總統拜登簽署。```0
-  ## 6/2/2023 - [馬斯克訪華成中國焦點 傳曾經會晤丁薛祥](https://www.dw.com/zh/馬斯克訪華成中國焦點-傳曾經會晤丁薛祥/a-65789014?maca=chi-rss-chi-all-1127-rdf)
- ```特斯拉首席執行官馬斯克6月1日結束炫風訪華行。有外媒報導，他週三曾與中國國務院副總理丁薛祥會晤，但中國官方尚未證實這項消息。```0
-  ## 6/2/2023 - [俄控美用iPhone監控外交官 蘋果否認](https://www.dw.com/zh/俄控美用iphone監控外交官-蘋果否認/a-65800294?maca=chi-rss-chi-all-1127-rdf)
- ```俄羅斯聯邦安全局稱，他們發現美國政府入侵了俄羅斯數千支iPhone手機，其中包含其他國家在俄外交官的手機。網安公司卡巴斯基說，有數十名員工的設備在這次行動中遭到破壞，但該公司並未直接將此歸咎於美國。```0
   ## 6/1/2023 - [德语媒体：对“去风险”，德国想的太天真](https://www.dw.com/zh/德语媒体：对-去风险-，德国想的太天真/a-65795713?maca=chi-rss-chi-all-1127-rdf)
  ```对中国的“去风险”战略，是近期德语媒体持续关注的话题。《世界报》指出，这一概念不像德国人想的那么简单。《柏林日报》认为，中国高层正在把欧洲作为拉拢的目标。.```0
-  ## 6/1/2023 - [乌克兰何时加盟？北约各国仍存在分歧](https://www.dw.com/zh/乌克兰何时加盟？北约各国仍存在分歧/a-65794083?maca=chi-rss-chi-all-1127-rdf)
- ```德国外长贝尔博克说：“北约的门户开放政策一如既往，但与此同时，战争还在进行之中，我们显然不能讨论接受新成员。”```0
-  ## 6/1/2023 - [2022年德国入籍人数创历史新高](https://www.dw.com/zh/2022年德国入籍人数创历史新高/a-65791823?maca=chi-rss-chi-all-1127-rdf)
- ```2022年，申请和获得德国国籍的人数创下过去20年的历史记录。这是一个好消息，因为德国政府希望吸引更多专业人才来到德国，并为此推动了国籍法改革。```0
   ## 6/1/2023 - [财新PMI上升 中国经济复苏出现不一致信号](https://www.dw.com/zh/财新pmi上升-中国经济复苏出现不一致信号/a-65790590?maca=chi-rss-chi-all-1127-rdf)
  ```中国官方公布的制造业PMI显示工业生产继续萎缩。不过，经济杂志财新公布的PMI则显示工业生产处于扩张状态。但即便是财新的调查也显示，就业以及企业信心仍处于低位。```0
   ## 6/1/2023 - [中國國內旅遊熱 海外旅遊仍未達疫前水準](https://www.dw.com/zh/中國國內旅遊熱-海外旅遊仍未達疫前水準/a-65788012?maca=chi-rss-chi-all-1127-rdf)
@@ -85,18 +87,16 @@
  ```丰唇肤白大眼睛——社交媒体的滤镜能在一瞬间把人变成超模。不过，心理学家却指出了背后的问题。```0
   ## 5/28/2023 - [脑机接口: FDA为Neuralink首次人体试验开绿灯](https://www.dw.com/zh/脑机接口-fda为neuralink首次人体试验开绿灯/a-65746594?maca=chi-rss-chi-all-1127-rdf)
  ```马斯克的“脑机接口”（Neuralink）公司表示，美国食品和药物管理局已经为其首次人体临床试验开了绿灯。这家成立于2016年的公司多次遭到美国联邦层面的调查。```0
-  ## 5/27/2023 - [德语媒体：李辉访欧与中国的外交秀](https://www.dw.com/zh/德语媒体：李辉访欧与中国的外交秀/a-65753301?maca=chi-rss-chi-all-1127-rdf)
- ```德语媒体认为，中国特使李辉此次访问欧洲，并没有让西方国家留下中国真的有意调解俄乌战争的印象，对于乌克兰问题的计划仍然模糊不清，其真实的意图是建立维护和平的大国形象。```0
   ## 5/26/2023 - [管住嘴或邁開腿？言論審查下的中國脫口秀](https://www.dw.com/zh/管住嘴或邁開腿？言論審查下的中國脫口秀/a-65739237?maca=chi-rss-chi-all-1127-rdf)
  ```中國脫口秀圈近日因「作風優良，能打勝仗」引起熱議，有網友戲稱，中國言論審查太苛刻，想搞脫口秀「要麼管住嘴，要麼邁開腿（潤至自由世界）」。脫口秀演員們如何看待不斷收緊的審查紅線？脫口秀在兩岸又有何差異？DW訪問了4位曾在兩岸演出的脫口秀演員，請他們將「脫口秀在中國」的包袱一一抖開。```0
   ## 5/25/2023 - [青年失业率居高不下 靠“孔乙己脱长衫”解决？](https://www.dw.com/zh/青年失业率居高不下-靠-孔乙己脱长衫-解决？/a-65732307?maca=chi-rss-chi-all-1127-rdf)
  ```为了防止年轻人陷入“毕业即失业”的困境，中国当局使出浑身解数，一面鼓励中小微企业招聘应届生，一面进行公务员和硕士扩招，同时展开舆论宣传攻势。此外，还有高校暗中用力，让数据“更好看”。```0
-  ## 5/21/2023 - [全球育儿成本韩国最高：钱都花在课外班了](https://www.dw.com/zh/全球育儿成本韩国最高：钱都花在课外班了/a-65674902?maca=chi-rss-chi-all-1127-rdf)
- ```研究显示，韩国是全球育儿成本最高的国家，为GDP的7.79倍，大量花费来自大量的课外补习班。中国位居第二，养育一个孩子到18岁的成本是人均GDP的6.9倍，其次是德国（3.64倍）和法国（2.24倍）。```0
   ## 5/21/2023 - [航运公会：到2032年船舶回收将翻倍](https://www.dw.com/zh/航运公会：到2032年船舶回收将翻倍/a-65669628?maca=chi-rss-chi-all-1127-rdf)
  ```随着航运业船队转型，变得更加利于气候保护，主要分布于亚洲地区的「船舶坟场」在未来几年内可能会获得空前的关注。```0
   ## 5/21/2023 - [研究：全球湖泊超过半数正在干涸](https://www.dw.com/zh/研究：全球湖泊超过半数正在干涸/a-65676698?maca=chi-rss-chi-all-1127-rdf)
  ```一项最新研究显示，全球变暖和人类消耗正在导致全球湖泊干涸。```0
+  ## 5/21/2023 - [全球育儿成本韩国最高：钱都花在课外班了](https://www.dw.com/zh/全球育儿成本韩国最高：钱都花在课外班了/a-65674902?maca=chi-rss-chi-all-1127-rdf)
+ ```研究显示，韩国是全球育儿成本最高的国家，为GDP的7.79倍，大量花费来自大量的课外补习班。中国位居第二，养育一个孩子到18岁的成本是人均GDP的6.9倍，其次是德国（3.64倍）和法国（2.24倍）。```0
   ## 5/21/2023 - [世界气象组织警告：未来五年将创下最热记录](https://www.dw.com/zh/世界气象组织警告：未来五年将创下最热记录/a-65668526?maca=chi-rss-chi-all-1127-rdf)
  ```世界气象组织表示，厄尔尼诺和温室气体的综合影响将导致气温飙升，并警告说：“我们需要做好准备。”```0
   ## 5/20/2023 - [又一脱口秀演员在中国遭封杀](https://www.dw.com/zh/又一脱口秀演员在中国遭封杀/a-65684797?maca=chi-rss-chi-all-1127-rdf)
