--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,10 @@
 
+  ## 6/3/2023 - [方济各将访蒙古 称遥望北京](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E6%96%B9%E6%B5%8E%E5%90%84%E5%B0%86%E8%AE%BF%E8%92%99%E5%8F%A4-%E7%A7%B0%E9%81%A5%E6%9C%9B%E5%8C%97%E4%BA%AC)
+ ```教皇弗朗西斯将于8月31日至9月4日作访问蒙古之行，这是他去过的最偏远的国度之一，那里只有大约1,300名天主教徒，但由于靠近中国，路透社说蒙古对罗马天主教具有重要的战略意义。```0
+  ## 6/3/2023 - [美国加紧构建对华沟通渠道 一副国务卿明日突访北京](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E5%8A%A0%E7%B4%A7%E6%9E%84%E5%BB%BA%E5%AF%B9%E5%8D%8E%E6%B2%9F%E9%80%9A%E6%B8%A0%E9%81%93-%E4%B8%80%E5%89%AF%E5%9B%BD%E5%8A%A1%E5%8D%BF%E6%98%8E%E6%97%A5%E7%AA%81%E8%AE%BF%E5%8C%97%E4%BA%AC)
+ ```美国周六宣布，美国负责东南亚事务的副国务卿丹尼尔-克里登布林克将在未来几天内对中国进行罕见的访问。法新社说，美国显示寻求使两国关系升温。```0
+  ## 6/3/2023 - [德国前军机飞行员在中国训练战机：德国防长立马在香格里拉质问中国防长李尚福](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E5%BE%B7%E5%9B%BD%E5%89%8D%E5%86%9B%E6%9C%BA%E9%A3%9E%E8%A1%8C%E5%91%98%E5%9C%A8%E4%B8%AD%E5%9B%BD%E8%AE%AD%E7%BB%83%E6%88%98%E6%9C%BA-%E5%BE%B7%E5%9B%BD%E9%98%B2%E9%95%BF%E7%AB%8B%E9%A9%AC%E5%9C%A8%E9%A6%99%E6%A0%BC%E9%87%8C%E6%8B%89%E8%B4%A8%E9%97%AE%E4%B8%AD%E5%9B%BD%E9%98%B2%E9%95%BF%E6%9D%8E%E5%B0%9A%E7%A6%8F)
+ ```德国《明镜》周刊昨天揭露仍然有德国退役尖端空军士兵在中国训练战斗机飞行员，该爆料在德国正在掀起波澜。德国防长参加在新加坡举行的香格里拉安全与防卫对话论坛，立即在与中国国防部长李尚福会面时，德国国防部长皮斯托瑞斯相当不客气地要求中国结束聘用德国退役飞行员训练中国战机飞行员。中国防长李尚福低调，但指德国防长夸大事情了。```0
   ## 6/3/2023 - [禁止纪念六四 香港警方今逮4人](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%A6%81%E6%AD%A2%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B-%E9%A6%99%E6%B8%AF%E8%AD%A6%E6%96%B9%E4%BB%8A%E9%80%AE4%E4%BA%BA)
  ```在天安门运动34周年前夕，香港警方在街头逮捕了至少两名艺术家和另外两名人士。```0
   ## 6/3/2023 - [针对朝鲜发射导弹 日本启用冲绳PAC-3也警惕中国](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230603-%E9%92%88%E5%AF%B9%E6%9C%9D%E9%B2%9C%E5%8F%91%E5%B0%84%E5%AF%BC%E5%BC%B9-%E6%97%A5%E6%9C%AC%E5%90%AF%E7%94%A8%E5%86%B2%E7%BB%B3pac-3%E4%B9%9F%E8%AD%A6%E6%83%95%E4%B8%AD%E5%9B%BD)
@@ -53,9 +59,3 @@
  ```英国哈里王子将成为130年来第一位在法庭上作证的高级英国皇室成员，下周他将在对他也参加指控的报业集团非法行为诉讼中作证。他出庭很可能会引起全世界的关注。英国王室一般避免卷入诉讼，因为王室担心不能控制诉讼走向，受两败俱伤威胁。```0
   ## 6/2/2023 - [【视频】俄军对基辅空袭：致3人死亡，包括一名儿童](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230602-%E8%A7%86%E9%A2%91-%E4%BF%84%E5%86%9B%E5%AF%B9%E5%9F%BA%E8%BE%85%E7%A9%BA%E8%A2%AD-%E8%87%B43%E4%BA%BA%E6%AD%BB%E4%BA%A1%EF%BC%8C%E5%8C%85%E6%8B%AC%E4%B8%80%E5%90%8D%E5%84%BF%E7%AB%A5)
  ```6月1日(星期四)凌晨，俄罗斯再次对基辅发动空袭，造成至少3人死亡，其中包括一名儿童。据乌克兰军方表示，俄军当天向基辅发射了约10枚弹道导弹，乌克兰防空系统拦截了所有这些导弹，但坠落的弹片造成了人员伤亡和设施受损。```0
-  ## 6/2/2023 - [中国又巨热 称考验电网](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E4%B8%AD%E5%9B%BD%E5%8F%88%E5%B7%A8%E7%83%AD-%E7%A7%B0%E8%80%83%E9%AA%8C%E7%94%B5%E7%BD%91)
- ```中国多地连续高温。经历了整个5月份的酷热天气后，中国南部和东部将继续面临持续数周的无情热浪。而且上海等特大城市也巨热，对空调的需求猛增，中国电网将承受巨大压力。```0
-  ## 6/2/2023 - [李辉回到北京称俄乌战争促和止战障碍很多](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E6%9D%8E%E8%BE%89%E5%9B%9E%E5%88%B0%E5%8C%97%E4%BA%AC%E7%A7%B0%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%E4%BF%83%E5%92%8C%E6%AD%A2%E6%88%98%E9%9A%9C%E7%A2%8D%E5%BE%88%E5%A4%9A)
- ```中国的乌克兰问题特使李辉周五在结束欧洲之行后返回北京。李辉借机说，有许多困难正在阻止俄罗斯和乌克兰在目前的情况下开始和平谈判。俄罗斯对李辉指责乌克兰是障碍。乌克兰对李辉说，乌克兰不接受割地冻结俄罗斯占领领土状况的停火谈判。```0
-  ## 6/2/2023 - [台湾与美国21世纪贸易倡议协定应有后续](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230602-%E5%8F%B0%E6%B9%BE%E4%B8%8E%E7%BE%8E%E5%9B%BD21%E4%B8%96%E7%BA%AA%E8%B4%B8%E6%98%93%E5%80%A1%E8%AE%AE%E5%8D%8F%E5%AE%9A%E5%BA%94%E6%9C%89%E5%90%8E%E7%BB%AD)
- ```台湾与美国关于21世纪贸易倡议首批协定1日于华府美国在台协会（AIT）总部由台湾驻美代表萧美琴与AIT执行理事蓝莺（IngridLarson）代表双方签署，据台湾行政院经贸谈判办公室强调，这项协定为台美经贸打下坚实的法律基础，未来极有机会发展为更广泛的自由贸易协定，且有助于台湾参加跨太平洋伙伴全面进步协定（CPTPP）。而协议下阶段议题与启动时程，目前考虑先处理劳工、环保与农业3个议题，但需要台湾再跟美方确认。```0
